--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   top: 0px;
 }
 
-.bread-jaw {
+.beard-jaw {
   width: 76px;
   height: 137px;
   top: 237px;
@@ -53,7 +53,7 @@ body {
   border-radius: 0 0 0 76px;
 }
 
-.bread-chin {
+.beard-chin {
   width: 115px;
   height: 137px;
   left: 93px;
